# ForgeOS

./: .env.example  .npmignore  LICENSE  README.md  boot.bat  boot.py  cli.py  forge.bat  launcher.py  package.json  pyproject.toml  requirements.txt
auth/: __init__.py  base.py  config.py  crypto.py  factory.py  login.py  storage.py  supabase_store.py
desktop/: __init__.py  chrome.py  icon.py  menus.py  picker.py  runner.py
desktop/gui/: __init__.py  about_app.py  app.py  login.py  start_menu.py  taskbar.py  terminal_app.py  text_console.py  theme.py  window_manager.py
docs/: HOME.md  WIKI.md
filesystem/: __init__.py  vfs.py
kernel/: __init__.py  kernel.py
scripts/: generate_icon.py  prepublish-clean.js
shell/: __init__.py  aliases.py  banner.py  completion.py  config.py  dispatcher.py  environment.py  errors.py  history.py  links.py  logger.py  parser.py  pipes.py  prompt.py  redirect.py  registry.py  session.py  shell.py  syntax.py
shell/commands/: __init__.py  base.py
shell/commands/apps/: calc.py  forgefetch.py  fortune.py  logo.py
shell/commands/developer/: forgepkg.py  git.py  node.py  npm.py  python.py
shell/commands/filesystem/: cat.py  cd.py  cp.py  find.py  grep.py  head.py  ls.py  mkdir.py  mv.py  pwd.py  rm.py  sort.py  tail.py  touch.py  tree.py  wc.py
shell/commands/network/: __init__.py  alias.py  curl.py  echo.py  history.py  man.py  netstat.py  (+4 more)
shell/ui/: __init__.py  animations.py  branding.py  colors.py  neofetch.py  panels.py  progress.py  screen.py  spinner.py  tables.py
supabase/: schema.sql
users/: __init__.py  users.py
(+36 files in other folders)
