[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeos"
version = "1.0.0"
description = "Forge OS — a Python virtual operating system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Forge OS Contributors" }]
keywords = ["forgeos", "virtual-os", "shell", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]
dependencies = [
    "rich>=14.0.0",
    "colorama>=0.4.6",
    "prompt_toolkit>=3.0.52",
    "platformdirs>=4.3.8",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
forgeos = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["auth*", "kernel*", "filesystem*", "users*", "packages*", "shell*"]

[tool.setuptools]
py-modules = ["boot", "cli", "launcher"]
